<resources>
    <string name="app_name">ZeepyForAndroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_address">후기를 남길 집을\n선택해주세요.</string>
    <string name="is_house_right_to_write_review">후기를 작성할 집이\n이 곳이 맞나요?</string>
    <string name="lessor_personality">임대인의 소통 성향은\n어땠나요?</string>
    <string name="lessor_detail_info">임대인에 대해\n조금 더 알려주세요!</string>
    <string name="house_condition">집에 대한 정보를\n조금 더 알려주세요!</string>
    <string name="lessor_house_picture">집의 외부와 내부 사진을\n첨부해 주세요.</string>
    <string name="notice_review">*임대인을 향한 비방이나 너무 심한 욕설은 자제해주세요. T-T!</string>
    <string name="room_count">방의 개수는 몇 개인가요?</string>
    <string name="total_good">다음에도 여기 살고 싶어요!</string>
    <string name="total_recommendation">완전 추천해요!</string>
    <string name="total_no_recommendation">그닥 추천하지 않아요.</string>
    <string name="no_achievement">목표를 설정하지 않은 글이에요!</string>
    <string name="next">다음으로</string>
    <string name="limit_count_address">*최대 3개까지 등록 가능합니다.</string>
    <string name="gathering">모집중</string>
    <string name="complete_gathering">모집완료</string>
    <string name="dummy_content_posting">저는 8,000원짜리 하나 시키려고 하는데 배달료가 아까워서요. 혹시 위메프에서 물건 시키시는 분 있으시면 같이 시켜요~ 3명만 받을게용. 수령 장소는 등촌1동주민센터 앞 예정이요</string>
    <string name="community_select_category">글의 카테고리를\n선택해주세요</string>
    <string name="input_title_write_posting">글의 제목을 입력해주세요.</string>
    <string name="input_purchase_write_posting">구매정보 입력</string>
    <string name="hint_product_price_write_posting">제품금액 (ex. 15,000원)</string>
    <string name="hint_product_name_write_posting">제품명 (ex. 삼다수 1.5L)</string>
    <string name="hint_purchase_site_write_posting">구매 장소 (ex. 쿠팡, 동네 슈퍼 등)</string>
    <string name="hint_deal_method_write_posting">거래 방식 (ex. 택배/직거래/만남장소 등)</string>
    <string name="collect_content_write_content">참여자에게 어떤 내용을 받을까요?</string>
    <string name="hint_count_people_write_posting">ex. 3</string>
    <string name="deposit_price_range">%1$s ~ %2$s</string>
    <string name="deposit_price_from">%1$s 부터</string>
    <string name="deposit_price_to">%1$s 까지</string>
    <string name="monthly_price_range">%1$s ~ %2$s</string>
    <string name="monthly_price_from">%1$s 부터</string>
    <string name="monthly_price_to">%1$s 까지</string>
    <string name="input_id_login">아이디를 입력해주세요</string>
    <string name="input_password_signup">8~16자의 비밀번호를 입력해주세요</string>
    <string name="target_count_write_posting">%d</string>
    <string name="input_name_signup">이름을 입력해주세요</string>
    <string name="input_password_check_signup">비밀번호를 다시 입력해주세요</string>
    <string name="getting_info_to_email_signup">ZEEPY 서비스 마케팅 수신에 동의합니다. (선택)</string>
    <string name="input_email_signup">이메일ID를 입력해주세요</string>
    <string name="myprofile_loggedout"><annotation clickTo="signIn" font="nanum_square_round_extrabold" color="zeepy_yellow_ee" ><u>로그인</u></annotation><annotation font="nanum_square_round_regular" color="zeepy_black_3b">을\n완료해주세요.</annotation></string>
    <string name="myprofile_loggedin"><annotation font="nanum_square_round_regular" color="zeepy_black_3b">반가워요!\n<annotation args="0" clickTo="editProfile" font="nanum_square_round_extrabold" color="zeepy_black_3b"><u>%1$s</u></annotation> 지기님</annotation></string>
    <string name="doesnt_match_password">비밀번호가 일치하지 않습니다.</string>
    <string name="lessor_business">칼 같은 우리 사이, 비즈니스형</string>
    <string name="lessor_kind">따뜻해 녹아내리는 중!, 친절형</string>
    <string name="lessor_graze">자유롭게만 살아다오, 방목형</string>
    <string name="lessor_softy">겉은 바삭 속은 촉촉! 츤데레형</string>
    <string name="lessor_bad">할말은 많지만 하지 않을래요:(</string>
    <string name="review_good">좋아요</string>
    <string name="review_soso">적당해요</string>
    <string name="review_bad">별로에요</string>
    <string name="roomcount_one">1개</string>
    <string name="roomcount_two">2개</string>
    <string name="roomcount_threeormore">3개 이상</string>
    <string name="airconditional">에어컨</string>
    <string name="wasingmachine">세탁기</string>
    <string name="bed">침대</string>
    <string name="closet">옷장</string>
    <string name="desk">책상</string>
    <string name="refridgerator">냉장고</string>
    <string name="induction">인덕션</string>
    <string name="burner">가스레인지</string>
    <string name="microwave">전자레인지</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="open_location_info_home">서울 강북, 세종 지역 오픈!</string>
    <string name="write_review_home">자취방 후기 작성하기</string>
    <string name="filter_building_home">성향에 맞는 자취방을 고르자!</string>
    <string name="select_community_posting_type_home">우리 동네 자취생 다모았ZIP</string>
    <string name="group_purchase">공동구매</string>
    <string name="freeshare">무료나눔</string>
    <string name="friends">동네친구</string>
    <string name="filter_all_home">유형 모두 보기</string>
    <string name="group_purchasing_community">공동 구매</string>
    <string name="free_sharing_community">나눔하기</string>
    <string name="friend_community">동네 친구</string>
    <string name="input_nickname_signup">사용하실 닉네임을 입력해주세요</string>
    <string name="input_password_upper_eight_signup">최소 8글자 이상의 비밀번호를 입력해주세요.</string>
    <string name="email_repetition_signup">이미 가입된 이메일입니다.</string>
    <string name="nickname_repetition_signup">이미 존재하는 닉네임입니다.</string>
    <string name="check_repetition_signup">중복확인</string>
    <string name="approve_zeepy_terms_signup">ZEEPY에서 제공하는 서비스 약관에 동의합니다. (필수)</string>
    <string name="input_password_login">비밀번호를 입력해주세요</string>
    <string name="write_review_notice_message">*리뷰 등록 후에는 수정하거나 삭제하실 수\n없으니 글 작성에 유의해주세요.\n\n*허위/중복/성의없는 정보 또는 비방글을\n작성할 경우, 서비스 이용이 제한될 수 있습니다.</string>
    <string name="login_notice_message">기능 제한 없이 ZEEPY의\n모든 기능을 즐겨보세요!</string>
    <string name="go_to_all_reviews_btn">건물 평가 모두보기(%d)</string>
    <string name="address_citydistinct_primary">%s %s</string>
    <string name="no_address_not_yet">아직 등록된 주소가요 없어요 :(</string>
    <string name="goto_register_address">직접 등록하기</string>
    <string name="logout_underlined"><u>로그아웃</u></string>
    <string name="withdraw_underlined"><u>회원탈퇴</u></string>
    <string name="report_confirm">정말 신고하시겠어요?</string>
    <string name="report_confirm_content">*신고 후에는 신고 내욜을 수정하거나\n취소하실 수 없습니다.\n\n*악의적인 의도나 허위로 신고할 경우에는\n서비스 이용이 제한될 수 있습니다.</string>
    <string name="report_select_reason">신고 사유를 선택해주세요.</string>
    <string name="report_warning">신고 후에는 운영진의 확인 후 글삭제, 회원 탈퇴 등의\n절차가 이루어지게 됩니다.</string>
    <string name="report_reason">신고 사유</string>
    <string name="etc">기타</string>
    <string name="content_detailed">상세 내용</string>
    <string name="report_detailed_msg">신고하려는 게시물, 사용자에 대해\n조금 더 상세히 알려주세요!</string>
    <string name="achievement_rate_format">%d명/%d명</string>
    <string name="achievement_progress_count_format">%d명</string>
    <string name="change_password_confirm">새로운 비밀번호로 변경합니다.</string>
    <string name="withdraw_warning1">&#8226; ZEEPY 회원탈퇴 시 ZEEPY 서비스에서 탈퇴되며, 회원탈퇴 후 재가입하더라도 탈퇴 전의 회원정보, 게시글 및 목록, 찜 목록 등은 복구되지 않습니다.</string>
    <string name="withdraw_warning2">&#8226; ZEEPY 회원탈퇴 시 회원정보 및 서비스 이용기록은 모두 삭제되며, 삭제된 데이터는 복구가 불가능합니다. 다만 법령에 의하여 보관해야 하는 경우 또는 회원가입 남용, 서비스 부정사용 등을 위한 정보는 회원탈퇴 후에도 일정기간 보관됩니다.</string>
    <string name="posting_content_notice_community">*ZEEPY 이용정책에 위반되는 게시글의 경우\n무통보 게시글 삭제 및 이용이 제재될 수 있습니다.</string>
    <string name="purchase_introduce_hint">공동구매를 간단히 소개해주세요. (100자 이내)</string>
    <string name="purchase_introduce_write_community">공구 소개</string>
    <string name="approve_personal_info">ZEEPY에서 제공하는 개인정보 처리방침에 동의합니다.</string>
    <string name="go_to_reviews_button">건물 리뷰 %s건 보러가기</string>
    <string name="go_to_reviews_button_none">아직 등록된 리뷰가 없습니다.</string>
    <string name="go_to_all_reviews">리뷰 전체보기 ></string>
    <string name="officetel">오피스텔</string>
    <string name="rowhouse">연립다세대</string>
    <string name="select_house">거주하고 계신 집을\n선택해주세요.</string>
    <string name="check_address_to_register">등록할 주소를\n확인해주세요.</string>
    <string name="format_count_posting_content">(%d/1500자)</string>
    <string name="onboarding_first_ment1">직접 뛰는 발품팔기 No!</string>
    <string name="onboarding_second_ment">내가 남긴\n자취방 후기는\n500만 자취생에게\n도움이 될거에요.</string>
    <string name="onboarding_third_ment">우리 손으로 만드는\n집단 지성!</string>
    <string name="finish_onboarding_text">리뷰 작성하고 세상을 이롭게 하기</string>
    <string name="onboarding_first_ment">살아본 사람들의\n리얼후기 yes!</string>
    <string name="monthly_pay">월세</string>
    <string name="jeonse_pay">전세</string>
    <string name="trade">매매</string>
    <string name="review_by_whom">%s님의 후기</string>
    <string name="all">전체</string>
    <string name="tendency_all">모든 성향</string>
    <string name="tendency_business">비즈니스형</string>
    <string name="tendency_kind">친절형</string>
    <string name="tendency_graze">방목형</string>
    <string name="tendency_softy">츤데레형</string>
    <string name="tendency_bad">할말하않</string>
    <string name="pick_address">주소를 선택해주세요.</string>
    <string name="lessor_tendency">집주인 성향</string>
    <string name="evaluation_building">건물 평가</string>
    <string name="preparing_for_update">정보 업데이트 준비 중</string>
    <string name="summary">요약</string>
    <string name="lessor">임대인</string>
    <string name="lessor_communication_tendency">임대인 소통 성향</string>
    <string name="sound_insulation">방음</string>
    <string name="pest">해충</string>
    <string name="lighting">채광</string>
    <string name="water_pressure">수압</string>
    <string name="review_lessor">임대인 리뷰</string>
    <string name="review_house">집 리뷰</string>
    <string name="photos_attached">첨부된 사진</string>
    <string name="hint_map_search">지역, 동, 지하철역으로 입력해주세요</string>
    <string name="search">검색</string>
    <string name="communication_type">소통유형별</string>
    <string name="building_detailed">건물 상세</string>
    <string name="total_evaluation">종합 평가</string>
    <string name="building_type">건물 유형</string>
    <string name="deal_type">거래 종류</string>
    <string name="price">가격</string>
    <string name="deposit">보증금</string>
    <string name="min">최소</string>
    <string name="max">최대</string>
    <string name="ten_million">1천만</string>
    <string name="fifty_million">5천만</string>
    <string name="five_hundred_thousand">50만</string>
    <string name="one_million">100만</string>
    <string name="furniture_options">가구옵션</string>
    <string name="notification_settings">알림설정</string>
    <string name="notification_settings_msg">알림을 설정하려면 설정을 변경해주세요.</string>
    <string name="confirm_change">변경하기</string>
    <string name="agree_receive_marketing_info">마케팅 정보 수신 동의</string>
    <string name="marketing_info_msg">ZEEPY의 소식을 가장 먼저 만나보실 수 있어요.</string>
    <string name="agree_receive_email">메일 수신동의</string>
    <string name="my_wishlist">내가 찜한 자취방</string>
    <string name="warning_title">유의사항</string>
    <string name="check_before_withdrawl">회원 탈퇴 전에 꼭 확인해주세요.</string>
    <string name="planner">기획</string>
    <string name="huggies">하기스</string>
    <string name="hyerin">류혜린</string>
    <string name="sumi">강수미</string>
    <string name="designer">디자인</string>
    <string name="jayoung">김자영</string>
    <string name="howdy">하우디</string>
    <string name="marketer">마케팅</string>
    <string name="hama">하마</string>
    <string name="eunjin">곽은진</string>
    <string name="juyoung">박주영</string>
    <string name="server">서버</string>
    <string name="harvard">하버드</string>
    <string name="minkyu">이민규</string>
    <string name="yein">이예인</string>
    <string name="hyunjong">이현종</string>
    <string name="bokyoung">황보경</string>
    <string name="client">클라이언트</string>
    <string name="howdoyoudo_hawayo">하우두유두, 하와요</string>
    <string name="jeongrok">서정록</string>
    <string name="pyeonghwa">손평화</string>
    <string name="jueun">김주은</string>
    <string name="taehoon">김태훈</string>
    <string name="hansol">노한솔</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일 ID</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="manage_address">주소 관리</string>
</resources>